fix cards wrapping on sixth page

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -405,7 +405,7 @@ body {
           }
 
           & > img, & > div {
-            flex: 1 1 50%;
+            flex: 1 1 60%;
 
             @include for-tablet {
               flex: 1 1 auto;
